bubba-frontend (1.2.4.56) estelle claire; urgency=low

  * same for RAID 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 02 Feb 2010 17:50:29 +0100

bubba-frontend (1.2.4.55) estelle claire; urgency=low

  * call modal.close before modal to enable cancel

 -- Carl Fürstenberg <carl@excito.com>  Tue, 02 Feb 2010 17:39:39 +0100

bubba-frontend (1.2.4.54) estelle claire; urgency=low

  * adding capabilities 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 02 Feb 2010 15:39:26 +0100

bubba-frontend (1.2.4.53) estelle claire; urgency=low

  * Added missing disk_model code.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 15:34:46 +0100

bubba-frontend (1.2.4.52) estelle claire; urgency=low

  * Fixed uninitiated variable in WAN page with no cable. 

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 14:33:28 +0100

bubba-frontend (1.2.4.51) estelle claire; urgency=low

  * Removed forgotten context menu div in backup.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 13:44:07 +0100

bubba-frontend (1.2.4.50) estelle claire; urgency=low

  * Stopping dnsmasq when setting auto/server profile.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 11:16:05 +0100

bubba-frontend (1.2.4.49) claire estelle; urgency=low

  * Fixed reported "get_lan_interface" bugg.

 -- PA Nilsson <pa@excito.com>  Mon, 01 Feb 2010 14:06:25 +0100

bubba-frontend (1.2.4.48) estelle claire; urgency=low

  * Correct repos

 -- PA Nilsson <pa@excito.com>  Mon, 01 Feb 2010 10:29:00 +0100

bubba-frontend (1.2.4.48) karmic; urgency=low

  * Updated version variable to trigger css/js reload after update. 

 -- PA Nilsson <pa@excito.com>  Mon, 01 Feb 2010 10:23:43 +0100

bubba-frontend (1.2.4.47) estelle claire; urgency=low

  * Added version number to css and js links to force reload.

 -- PA Nilsson <pa@excito.com>  Mon, 01 Feb 2010 10:08:59 +0100

bubba-frontend (1.2.4.46) claire estelle; urgency=low

  [ PA Nilsson ]
  * * Using ifrestart to restart network interfaces. (Closes: #1085)
