@@ -1,9 +1,9 @@
 /*
- * SimpleModal 1.2.3 - jQuery Plugin
+ * SimpleModal 1.3.3 - jQuery Plugin
  * http://www.ericmmartin.com/projects/simplemodal/
- * Copyright (c) 2009 Eric Martin
+ * Copyright (c) 2009 Eric Martin (http://twitter.com/EricMMartin)
  * Dual licensed under the MIT and GPL licenses
- * Revision: $Id: jquery.simplemodal.js 185 2009-02-09 21:51:12Z emartin24 $
+ * Revision: $Id: jquery.simplemodal.js 228 2009-10-30 13:34:27Z emartin24 $
  */
 
 /**
@@ -47,19 +47,20 @@
  * overlayCss and/or containerCss options.
  *
  * SimpleModal has been tested in the following browsers:
- * - IE 6, 7
+ * - IE 6, 7, 8
  * - Firefox 2, 3
- * - Opera 9
- * - Safari 3
+ * - Opera 9, 10
+ * - Safari 3, 4
+ * - Chrome 1, 2
  *
  * @name SimpleModal
  * @type jQuery
  * @requires jQuery v1.2.2
  * @cat Plugins/Windows and Overlays
  * @author Eric Martin (http://ericmmartin.com)
- * @version 1.2.3
+ * @version 1.3.3
  */
-(function ($) {
+;(function ($) {
 	var ie6 = $.browser.msie && parseInt($.browser.version) == 6 && typeof window['XMLHttpRequest'] != "object",
 		ieQuirks = null,
 		w = [];
@@ -93,37 +94,60 @@
 	/*
 	 * SimpleModal default options
 	 * 
-	 * opacity: (Number:50) The opacity value for the overlay div, from 0 - 100
-	 * overlayId: (String:'simplemodal-overlay') The DOM element id for the overlay div
-	 * overlayCss: (Object:{}) The CSS styling for the overlay div
-	 * containerId: (String:'simplemodal-container') The DOM element id for the container div
-	 * containerCss: (Object:{}) The CSS styling for the container div
-	 * dataCss: (Object:{}) The CSS styling for the data div
-	 * zIndex: (Number: 1000) Starting z-index value
-	 * close: (Boolean:true) Show closeHTML?
-	 * closeHTML: (String:'<a class="modalCloseImg" title="Close"></a>') The HTML for the 
-	              default close link. SimpleModal will automatically add the closeClass to this element.
-	 * closeClass: (String:'simplemodal-close') The CSS class used to bind to the close event
-	 * position: (Array:null) Position of container [top, left]. Can be number of pixels or percentage
-	 * persist: (Boolean:false) Persist the data across modal calls? Only used for existing
-	            DOM elements. If true, the data will be maintained across modal calls, if false,
-				   the data will be reverted to its original state.
-	 * onOpen: (Function:null) The callback function used in place of SimpleModal's open
-	 * onShow: (Function:null) The callback function used after the modal dialog has opened
-	 * onClose: (Function:null) The callback function used in place of SimpleModal's close
+	 * appendTo:		(String:'body') The jQuery selector to append the elements to. For ASP.NET, use 'form'.
+	 * focus:			(Boolean:true) Forces focus to remain on the modal dialog
+	 * opacity:			(Number:50) The opacity value for the overlay div, from 0 - 100
+	 * overlayId:		(String:'simplemodal-overlay') The DOM element id for the overlay div
+	 * overlayCss:		(Object:{}) The CSS styling for the overlay div
+	 * containerId:		(String:'simplemodal-container') The DOM element id for the container div
+	 * containerCss:	(Object:{}) The CSS styling for the container div
+	 * dataId:			(String:'simplemodal-data') The DOM element id for the data div
+	 * dataCss:			(Object:{}) The CSS styling for the data div
+	 * minHeight:		(Number:200) The minimum height for the container
+	 * minWidth:		(Number:200) The minimum width for the container
+	 * maxHeight:		(Number:null) The maximum height for the container. If not specified, the window height is used.
+	 * maxWidth:		(Number:null) The maximum width for the container. If not specified, the window width is used.
+	 * autoResize:		(Boolean:false) Resize container on window resize? Use with caution - this may have undesirable side-effects.
+	 * autoPosition:	(Boolean:true) Reposition container on window resize?
+	 * zIndex:			(Number: 1000) Starting z-index value
+	 * close:			(Boolean:true) If true, closeHTML, escClose and overClose will be used if set.
+	 							If false, none of them will be used.
+	 * closeHTML:		(String:'<a class="modalCloseImg" title="Close"></a>') The HTML for the 
+							default close link. SimpleModal will automatically add the closeClass to this element.
+	 * closeClass:		(String:'simplemodal-close') The CSS class used to bind to the close event
+	 * escClose:		(Boolean:true) Allow Esc keypress to close the dialog? 
+	 * overlayClose:	(Boolean:false) Allow click on overlay to close the dialog?
+	 * position:		(Array:null) Position of container [top, left]. Can be number of pixels or percentage
+	 * persist:			(Boolean:false) Persist the data across modal calls? Only used for existing
+								DOM elements. If true, the data will be maintained across modal calls, if false,
+								the data will be reverted to its original state.
+	 * onOpen:			(Function:null) The callback function used in place of SimpleModal's open
+	 * onShow:			(Function:null) The callback function used after the modal dialog has opened
+	 * onClose:			(Function:null) The callback function used in place of SimpleModal's close
 	 */
 	$.modal.defaults = {
-		opacity: 65,
+		appendTo: 'body',
+		focus: true,
+		opacity: 50,
 		overlayId: 'simplemodal-overlay',
 		overlayCss: {},
 		containerId: 'simplemodal-container',
 		containerCss: {},
+		dataId: 'simplemodal-data',
 		dataCss: {},
+		minHeight: 200,
+		minWidth: 300,
+		maxHeight: null,
+		maxWidth: null,
+		autoResize: false,
+		autoPosition: true,
 		zIndex: 1000,
 		close: true,
-		closeHTML: '<a href="#" title="Close" class="modalCloseX">x</a>',
+		closeHTML: '<a class="modalCloseImg" title="Close"></a>',
 		closeClass: 'simplemodal-close',
-		position: ["20%",],
+		escClose: true,
+		overlayClose: false,
+		position: null,
 		persist: false,
 		onOpen: null,
 		onShow: null,
@@ -137,18 +161,20 @@
 		/*
 		 * Modal dialog options
 		 */
-		opts: null,
+		o: null,
 		/*
 		 * Contains the modal dialog elements and is the object passed 
 		 * back to the callback (onOpen, onShow, onClose) functions
 		 */
-		dialog: {},
+		d: {},
 		/*
 		 * Initialize the modal dialog
 		 */
 		init: function (data, options) {
+			var s = this;
+
 			// don't allow multiple calls
-			if (this.dialog.data) {
+			if (s.d.data) {
 				return false;
 			}
 
@@ -156,13 +182,13 @@
 			ieQuirks = $.browser.msie && !$.boxModel;
 
 			// merge defaults and user options
-			this.opts = $.extend({}, $.modal.defaults, options);
+			s.o = $.extend({}, $.modal.defaults, options);
 
 			// keep track of z-index
-			this.zIndex = this.opts.zIndex;
+			s.zIndex = s.o.zIndex;
 
 			// set the onClose callback flag
-			this.occb = false;
+			s.occb = false;
 
 			// determine how to handle the data based on its type
 			if (typeof data == 'object') {
@@ -171,130 +197,165 @@
 
 				// if the object came from the DOM, keep track of its parent
 				if (data.parent().parent().size() > 0) {
-					this.dialog.parentNode = data.parent();
+					s.d.parentNode = data.parent();
 
 					// persist changes? if not, make a clone of the element
-					if (!this.opts.persist) {
-						this.dialog.orig = data.clone(true);
+					if (!s.o.persist) {
+						s.d.orig = data.clone(true);
 					}
 				}
 			}
 			else if (typeof data == 'string' || typeof data == 'number') {
 				// just insert the data as innerHTML
-				data = $('<div/>').html(data);
+				data = $('<div></div>').html(data);
 			}
 			else {
 				// unsupported data type!
 				alert('SimpleModal Error: Unsupported data type: ' + typeof data);
-				return false;
+				return s;
 			}
-			this.dialog.data = data.addClass('simplemodal-data').css(this.opts.dataCss);
-			data = null;
 
 			// create the modal overlay, container and, if necessary, iframe
-			this.create();
+			s.create(data);
+			data = null;
 
 			// display the modal dialog
-			this.open();
+			s.open();
 
 			// useful for adding events/manipulating data in the modal dialog
-			if ($.isFunction(this.opts.onShow)) {
-				this.opts.onShow.apply(this, [this.dialog]);
+			if ($.isFunction(s.o.onShow)) {
+				s.o.onShow.apply(s, [s.d]);
 			}
 
 			// don't break the chain =)
-			return this;
+			return s;
 		},
 		/*
 		 * Create and add the modal overlay and container to the page
 		 */
-		create: function () {
+		create: function (data) {
+			var s = this;
+
 			// get the window properties
-			w = this.getDimensions();
+			w = s.getDimensions();
 
 			// add an iframe to prevent select options from bleeding through
 			if (ie6) {
-				this.dialog.iframe = $('<iframe src="javascript:false;"/>')
-					.css($.extend(this.opts.iframeCss, {
+				s.d.iframe = $('<iframe src="javascript:false;"></iframe>')
+					.css($.extend(s.o.iframeCss, {
 						display: 'none',
 						opacity: 0, 
 						position: 'fixed',
 						height: w[0],
 						width: w[1],
-						zIndex: this.opts.zIndex,
+						zIndex: s.o.zIndex,
 						top: 0,
 						left: 0
 					}))
-					.appendTo('body');
+					.appendTo(s.o.appendTo);
 			}
 
 			// create the overlay
-			this.dialog.overlay = $('<div/>')
-				.attr('id', this.opts.overlayId)
+			s.d.overlay = $('<div></div>')
+				.attr('id', s.o.overlayId)
 				.addClass('simplemodal-overlay')
-				.css($.extend(this.opts.overlayCss, {
+				.css($.extend(s.o.overlayCss, {
 					display: 'none',
-					opacity: this.opts.opacity / 100,
+					opacity: s.o.opacity / 100,
 					height: w[0],
 					width: w[1],
 					position: 'fixed',
 					left: 0,
 					top: 0,
-					zIndex: this.opts.zIndex + 1
+					zIndex: s.o.zIndex + 1
 				}))
-				.appendTo('body');
-
+				.appendTo(s.o.appendTo);
+		
 			// create the container
-			this.dialog.container = $('<div/>')
-				.attr('id', this.opts.containerId)
+			s.d.container = $('<div></div>')
+				.attr('id', s.o.containerId)
 				.addClass('simplemodal-container')
-				.css($.extend(this.opts.containerCss, {
+				.css($.extend(s.o.containerCss, {
 					display: 'none',
 					position: 'fixed', 
-					zIndex: this.opts.zIndex + 2
+					zIndex: s.o.zIndex + 2
 				}))
-				.append(this.opts.close 
-					? $(this.opts.closeHTML).addClass(this.opts.closeClass)
+				.append(s.o.close && s.o.closeHTML
+					? $(s.o.closeHTML).addClass(s.o.closeClass)
 					: '')
+				.appendTo(s.o.appendTo);
+				
+			s.d.wrap = $('<div></div>')
+				.attr('tabIndex', -1)
+				.addClass('simplemodal-wrap')
+				.css({height: '100%', outline: 0, width: '100%'})
+				.appendTo(s.d.container);
+				
+			// add styling and attributes to the data
+			// append to body to get correct dimensions, then move to wrap
+			s.d.data = data
+				.attr('id', data.attr('id') || s.o.dataId)
+				.addClass('simplemodal-data')
+				.css($.extend(s.o.dataCss, {
+						display: 'none'
+				}))
 				.appendTo('body');
+			data = null;
 
-			this.setPosition();
+			s.setContainerDimensions();
+			s.d.data.appendTo(s.d.wrap);
 
 			// fix issues with IE
 			if (ie6 || ieQuirks) {
-				this.fixIE();
+				s.fixIE();
 			}
-
-			// hide the data and add it to the container
-			this.dialog.container.append(this.dialog.data.hide());
 		},
 		/*
 		 * Bind events
 		 */
 		bindEvents: function () {
-			var self = this;
+			var s = this;
 
 			// bind the close event to any element with the closeClass class
-			$('.' + this.opts.closeClass).bind('click.simplemodal', function (e) {
+			$('.' + s.o.closeClass).bind('click.simplemodal', function (e) {
 				e.preventDefault();
-				self.close();
+				s.close();
+			});
+			
+			// bind the overlay click to the close function, if enabled
+			if (s.o.close && s.o.overlayClose) {
+				s.d.overlay.bind('click.simplemodal', function (e) {
+					e.preventDefault();
+					s.close();
+				});
+			}
+	
+			// bind keydown events
+			$(document).bind('keydown.simplemodal', function (e) {
+				if (s.o.focus && e.keyCode == 9) { // TAB
+					s.watchTab(e);
+				}
+				else if ((s.o.close && s.o.escClose) && e.keyCode == 27) { // ESC
+					e.preventDefault();
+					s.close();
+				}
 			});
 
 			// update window size
 			$(window).bind('resize.simplemodal', function () {
 				// redetermine the window width/height
-				w = self.getDimensions();
+				w = s.getDimensions();
 
 				// reposition the dialog
-				self.setPosition();
+				s.setContainerDimensions(true);
 	
 				if (ie6 || ieQuirks) {
-					self.fixIE();
+					s.fixIE();
 				}
 				else {
 					// update the iframe & overlay
-					self.dialog.iframe && self.dialog.iframe.css({height: w[0], width: w[1]});
-					self.dialog.overlay.css({height: w[0], width: w[1]});
+					s.d.iframe && s.d.iframe.css({height: w[0], width: w[1]});
+					s.d.overlay.css({height: w[0], width: w[1]});
 				}
 			});
 		},
@@ -302,17 +363,19 @@
 		 * Unbind events
 		 */
 		unbindEvents: function () {
-			$('.' + this.opts.closeClass).unbind('click.simplemodal');
+			$('.' + this.o.closeClass).unbind('click.simplemodal');
+			$(document).unbind('keydown.simplemodal');
 			$(window).unbind('resize.simplemodal');
+			this.d.overlay.unbind('click.simplemodal');
 		},
 		/*
 		 * Fix issues in IE6 and IE7 in quirks mode
 		 */
 		fixIE: function () {
-			var p = this.opts.position;
+			var s=this, p = s.o.position;
 
 			// simulate fixed position - adapted from BlockUI
-			$.each([this.dialog.iframe || null, this.dialog.overlay, this.dialog.container], function (i, el) {
+			$.each([s.d.iframe || null, s.d.overlay, s.d.container], function (i, el) {
 				if (el) {
 					var bch = 'document.body.clientHeight', bcw = 'document.body.clientWidth',
 						bsh = 'document.body.scrollHeight', bsl = 'document.body.scrollLeft',
@@ -357,29 +420,110 @@
 				}
 			});
 		},
+		focus: function (pos) {
+			var s = this, p = pos || 'first';
+
+			// focus on dialog or the first visible/enabled input element
+			var input = $(':input:enabled:visible:' + p, s.d.wrap);
+			input.length > 0 ? input.focus() : s.d.wrap.focus();
+		},
 		getDimensions: function () {
 			var el = $(window);
 
 			// fix a jQuery/Opera bug with determining the window height
-			var h = $.browser.opera && $.browser.version > '9.5' && $.fn.jquery <= '1.2.6' ?
-				document.documentElement['clientHeight'] : 
+			var h = $.browser.opera && $.browser.version > '9.5' && $.fn.jquery <= '1.2.6' ? document.documentElement['clientHeight'] :
+				$.browser.opera && $.browser.version < '9.5' && $.fn.jquery > '1.2.6' ? window.innerHeight :
 				el.height();
 
 			return [h, el.width()];
 		},
-		setPosition: function () {
-			var top, left,
-				hCenter = (w[0]/2) - ((this.dialog.container.height() || this.dialog.data.height())/2),
-				vCenter = (w[1]/2) - ((this.dialog.container.width() || this.dialog.data.width())/2);
+		getVal: function (v) {
+			return v == 'auto' ? 0 
+				: v.indexOf('%') > 0 ? v 
+					: parseInt(v.replace(/px/, ''));
+		},
+		setContainerDimensions: function (resize) {
+			var s = this;
 
-			if (this.opts.position && this.opts.position.constructor == Array) {
-				top = this.opts.position[0] || hCenter;
-				left = this.opts.position[1] || vCenter;
-			} else {
-				top = hCenter;
-				left = vCenter;
+			if (!resize || (resize && s.o.autoResize)) {
+				// get the dimensions for the container and data
+				var ch = s.getVal(s.d.container.css('height')), cw = s.getVal(s.d.container.css('width')),
+					dh = s.d.data.outerHeight(true), dw = s.d.data.outerWidth(true);
+
+				var mh = s.o.maxHeight && s.o.maxHeight < w[0] ? s.o.maxHeight : w[0],
+					mw = s.o.maxWidth && s.o.maxWidth < w[1] ? s.o.maxWidth : w[1];
+
+				// height
+				if (!ch) {
+					if (!dh) {ch = s.o.minHeight;}
+					else {
+						if (dh > mh) {ch = mh;}
+						else if (dh < s.o.minHeight) {ch = s.o.minHeight;}
+						else {ch = dh;}
+					}
+				}
+				else {
+					ch = ch > mh ? mh : ch;
+				}
+
+				// width
+				if (!cw) {
+					if (!dw) {cw = s.o.minWidth;}
+					else {
+						if (dw > mw) {cw = mw;}
+						else if (dw < s.o.minWidth) {cw = s.o.minWidth;}
+						else {cw = dw;}
+					}
+				}
+				else {
+					cw = cw > mw ? mw : cw;
+				}
+
+				s.d.container.css({height: ch, width: cw});
+				if (dh > ch || dw > cw) {
+					s.d.wrap.css({overflow:'auto'});
+				}
 			}
-			this.dialog.container.css({left: left, top: top});
+			
+			if (s.o.autoPosition) {
+				s.setPosition();
+			}
+		},
+		setPosition: function () {
+			var s = this, top, left,
+				hc = (w[0]/2) - (s.d.container.outerHeight(true)/2),
+				vc = (w[1]/2) - (s.d.container.outerWidth(true)/2);
+
+			if (s.o.position && Object.prototype.toString.call(s.o.position) === "[object Array]") {
+				top = s.o.position[0] || hc;
+				left = s.o.position[1] || vc;
+			} else {
+				top = hc;
+				left = vc;
+			}
+			s.d.container.css({left: left, top: top});
+		},
+		watchTab: function (e) {
+			var s = this;
+
+			if ($(e.target).parents('.simplemodal-container').length > 0) {
+				// save the list of inputs
+				s.inputs = $(':input:enabled:visible:first, :input:enabled:visible:last', s.d.data[0]);
+
+				// if it's the first or last tabbable element, refocus
+				if ((!e.shiftKey && e.target == s.inputs[s.inputs.length -1]) ||
+						(e.shiftKey && e.target == s.inputs[0]) ||
+						s.inputs.length == 0) {
+					e.preventDefault();
+					var pos = e.shiftKey ? 'last' : 'first';
+					setTimeout(function () {s.focus(pos);}, 10);
+				}
+			}
+			else {
+				// might be necessary when custom onShow callback is used
+				e.preventDefault();
+				setTimeout(function () {s.focus();}, 10);
+			}
 		},
 		/*
 		 * Open the modal dialog elements
@@ -388,22 +532,25 @@
 		 *         (the iframe will be handled by SimpleModal)
 		 */
 		open: function () {
+			var s = this;
 			// display the iframe
-			this.dialog.iframe && this.dialog.iframe.show();
+			s.d.iframe && s.d.iframe.show();
 
-			if ($.isFunction(this.opts.onOpen)) {
+			if ($.isFunction(s.o.onOpen)) {
 				// execute the onOpen callback 
-				this.opts.onOpen.apply(this, [this.dialog]);
+				s.o.onOpen.apply(s, [s.d]);
 			}
 			else {
 				// display the remaining elements
-				this.dialog.overlay.show();
-				this.dialog.container.show();
-				this.dialog.data.show();
+				s.d.overlay.show();
+				s.d.container.show();
+				s.d.data.show();
 			}
+			
+			s.focus();
 
 			// bind default events
-			this.bindEvents();
+			s.bindEvents();
 		},
 		/*
 		 * Close the modal dialog
@@ -415,49 +562,51 @@
 		 *     onClose callback will be ignored
 		 */
 		close: function () {
+			var s = this;
+
 			// prevent close when dialog does not exist
-			if (!this.dialog.data) {
+			if (!s.d.data) {
 				return false;
 			}
 
-			if ($.isFunction(this.opts.onClose) && !this.occb) {
+			// remove the default events
+			s.unbindEvents();
+
+			if ($.isFunction(s.o.onClose) && !s.occb) {
 				// set the onClose callback flag
-				this.occb = true;
+				s.occb = true;
 
 				// execute the onClose callback
-				this.opts.onClose.apply(this, [this.dialog]);
+				s.o.onClose.apply(s, [s.d]);
 			}
 			else {
 				// if the data came from the DOM, put it back
-				if (this.dialog.parentNode) {
+				if (s.d.parentNode) {
 					// save changes to the data?
-					if (this.opts.persist) {
+					if (s.o.persist) {
 						// insert the (possibly) modified data back into the DOM
-						this.dialog.data.hide().appendTo(this.dialog.parentNode);
+						s.d.data.hide().appendTo(s.d.parentNode);
 					}
 					else {
 						// remove the current and insert the original, 
 						// unmodified data back into the DOM
-						this.dialog.data.remove();
-						this.dialog.orig.appendTo(this.dialog.parentNode);
+						s.d.data.hide().remove();
+						s.d.orig.appendTo(s.d.parentNode);
 					}
 				}
 				else {
 					// otherwise, remove it
-					this.dialog.data.remove();
+					s.d.data.hide().remove();
 				}
 
 				// remove the remaining elements
-				this.dialog.container.remove();
-				this.dialog.overlay.remove();
-				this.dialog.iframe && this.dialog.iframe.remove();
+				s.d.container.hide().remove();
+				s.d.overlay.hide().remove();
+				s.d.iframe && s.d.iframe.hide().remove();
 
 				// reset the dialog object
-				this.dialog = {};
+				s.d = {};
 			}
-
-			// remove the default events
-			this.unbindEvents();
 		}
 	};
 })(jQuery);
